@@ -1,5 +1,10 @@
 2004-11-24 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/TreeView_Detail.cc: renamed columnheader from 'Type' to 'Filesystem'. Dunno why it was called 'Type' (maybe some PM legacy =)  )
+	* src/Win_GParted.cc: Made device busy warning a bit more sensible.
+
+2004-11-24 Bart Hakvoort  <gparted@users.sf.net>
+
 	* include/Utils.h,
 	  src/GParted_Core.cc,
 	  src/Partition.cc,
